# MonteCarlo-based-option-pricer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  montecarlo.cpp  montecarlo.h
lib/: Timer.cpp  Timer.h
src/: data.py  main.cpp  montecarlo.cpp  montecarlo.h
